# sd-tinder-backend-mvp

./: .env.example  .gitignore  AGENTS.md  DEPLOY.md  DESIGN.md  Dockerfile  KICKOFF.md  README.md  SPEC.md  alembic.ini  compose.yml  pyproject.toml
.github/workflows/: ci.yml  functional.yml  lint.yml
alembic/: env.py
alembic/versions/: 0efaebdc6eb2_increase_user_id_length.py  33a7bfe3fff4_initial_users_swipes_matches_messages.py
docs/: mvp-scope.md  system-design.md
src/tinder/: config.py  database.py  main.py
src/tinder/models/: __init__.py  match.py  message.py  swipe.py  user.py
src/tinder/routers/: __init__.py  feed.py  matches.py  messages.py  profile.py  swipe.py
src/tinder/schemas/: __init__.py  feed.py  match.py  message.py  profile.py  swipe.py
src/tinder/services/: __init__.py  feed.py  geohash.py  match.py  message.py  profile.py  redis_client.py  swipe.py
tests/: conftest.py
tests/functional/: conftest.py  test_scenarios.py
tests/unit/: test_healthz.py  test_models.py
verify/: manifest.env
verify/acceptance/: conftest.py  test_fr1_create_edit_profile.py  test_fr2_discovery_preferences.py  test_fr3_feed.py  test_fr4_swipe.py  test_fr5_match_list.py  test_fr6_messaging.py  test_fr7_unmatch.py  test_fr8_health.py
