[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinder"
version = "0.1.0"
description = "Tinder MVP — REST polling-based dating service"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.30.0,<1.0",
    "sqlalchemy[asyncio]>=2.0.30,<3.0",
    "asyncpg>=0.29.0,<1.0",
    "alembic>=1.13.0,<2.0",
    "pydantic-settings>=2.3.0,<3.0",
    "redis>=5.0.0,<6.0",
    "pygeohash>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "httpx>=0.27.0,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S311", "F401"]
"verify/**/*.py" = ["S101", "S311", "F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
